--- a/.github/workflows/deploy-prototypes.yml
+++ b/.github/workflows/deploy-prototypes.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - master
+    paths:
+      - 'prototypes/**'
+      - '.github/workflows/deploy-prototypes.yml'
 
 permissions:
   contents: write
