--- a/prototypes/Edge/package.json
+++ b/prototypes/Edge/package.json
@@ -18,9 +18,9 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
@@ -38,9 +38,10 @@
     "react-helmet": "^6.1.0",
     "react-leaflet": "^4.2.1",
     "react-markdown": "^9.0.1",
+    "react-scroll": "^1.9.3",
+    "remark-gfm": "^4.0.0",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.7",
-    "remark-gfm": "^4.0.0"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@babel/generator": "^7.27.0",
