--- a/.github/workflows/deploy-prototypes.yml
+++ b/.github/workflows/deploy-prototypes.yml
@@ -47,7 +47,7 @@ jobs:
             echo "\n📦 Building $dir"
             pushd "prototypes/$dir" >/dev/null
             npm ci
-            npm run build -- --base="/spec/${dir}/"
+            npm run build -- --base="/real-life-stack/${dir}/"
             popd >/dev/null
             mkdir -p "gh-pages/$dir"
             cp -R "prototypes/$dir/dist/." "gh-pages/$dir/"
